syntax = "proto3";
package team.bakkas.grpcIfs.v1.shopReview;

option java_multiple_files = true;

service ShopReviewService {
  /** 파라미터에 대응하는 shopReview가 존재하는지 여부를 반환하는 메소드
   * @param CheckExistShopReviewRequest
   * @returns CheckExistShopReviewResponse
   */
  rpc isExistShopReview (CheckExistShopReviewRequest) returns (CheckExistShopReviewResponse);

  /** 파라미터에 대응하는 shopReview가 존재하며, 동시에 답글이 달려있는지 여부를 반환해주는 gRPC 메소드
   * @param CheckIsRepliedReviewRequest
   * @returns CheckIsRepliedReviewResponse
   */
  rpc isRepliedReview (CheckIsRepliedReviewRequest) returns (CheckIsRepliedReviewResponse);
}

message CheckExistShopReviewRequest {
  string reviewId = 1;
}

message CheckExistShopReviewResponse {
  bool result = 1;
}

message CheckIsRepliedReviewRequest {
  string reviewId = 1;
}

message CheckIsRepliedReviewResponse {
  bool isExists = 1;
  bool isReplied = 2;
}